--- a/chapter-01.tex
+++ b/chapter-01.tex
@@ -656,7 +656,10 @@ vertical bar divided into four colours depicting the estimate of the fraction
 of ancestry that each individual draws from each of the four
 populations.  In their caption of this figure they say:  
 ``Figure 1. STRUCTURE Analysis, Blinded to Population Labels, Recapitulates the Reported Population Structure of the Chimpanzees
-Individuals 76–78 are reported hybrids. Only two individuals with a >5\% proportion of ancestry in more than one inferred cluster are wild born: number 54 and number 17. Red, central; blue, eastern; green, western; yellow, bonobo.''}
+Individuals 76–78 are reported hybrids. Only two individuals with a
+>5\% proportion of ancestry in more than one inferred cluster are wild
+born: number 54 and number 17. Red, central; blue, eastern; green,
+western; yellow, bonobo.''}  % http://journals.plos.org/plosgenetics/article?id=10.1371%2Fjournal.pgen.0030066
 \end{figure}
 \subsubsection{Principal components analysis}
 The use of principal component analysis in population genetics was
